--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </header>
                     <div style="padding-top: 70px;">
                         <div style="font-size: 24px; font-weight: 300; letter-spacing: 2px;">
-                            <span>YOUR SCORE</span>
+                            <span id="data-user-remark">YOUR SCORE</span>
                         </div>
                         <div style="font-size: 60px; font-weight: 300; padding-top: 45px;">
                             <span><span id="data-user-score"></span> / 1600</span>
