Changed many pictures

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <meta id="meta-description" name='description' content='Know how familiar you are with the most famous fonts.'>
+        <meta id="meta-description" name='keywords' content='The keywords.'>
         <title>Know Your Font</title>
 
         <!-- Prefetch: Backgrounds -->
@@ -69,7 +71,7 @@
                         <h2 id="my-chapter-h2">Chapter 1</h2>
                         <div class="separation contextual-fill"></div>
                         <h3 id="my-challenge-h3">Challenge 1</h3>
-                        <p id="my-question">Which font is This?</p>
+                        <p id="my-question">Which font is Times?</p>
                     </div>
                     <div class="options-playground" data-options-playground-type="A">
                         <div class="before-options">
@@ -104,15 +106,19 @@
                     <header>
                         <img class="js-TheLogo" src="/img/logo-b.png" width="100" height="100">
                     </header>
-                    <div style="padding-top: 70px;">
-                        <div style="font-size: 24px; font-weight: 300;">
+                    <div style="color: #000; background: #FFF; width: 420px; height: 420px; padding: 40px 0 0; margin: 10px auto 0;">
+                        <div style="height: 110px; font-size: 24px; font-weight: 300;">
                             <span id="data-user-remark">YOUR SCORE</span>
                         </div>
-                        <div style="font-size: 60px; font-weight: 300; padding-top: 45px;">
-                            <span><span id="data-user-score"></span> / 1600</span>
+                        <div style="height: 205px; font-size: 90px; font-weight: 300;">
+                            <span id="data-user-score"></span><div style="font-size: 14px; color: #999;">out of 1600</div>
                         </div>
-                        <div style="font-size: 24px; font-weight: 300; padding-top: 45px;">
+                        <div style="font-size: 24px; font-weight: 300;">
                             <span>Share on <span class="underline cursor-pointer" onclick="KYF.shareFB()">Facebook</span> or <a id="js-ShareButton-twitter" class="underline cursor-pointer" target="_blank">Twitter</a>?</span>
+                        </div>
+                    </div>
+                    <div>
+                        <div style="text-align: center;">
                         </div>
                     </div>
                 </div>
@@ -125,10 +131,10 @@
             <button id="js-TheButton" type="button" class="my-btn contextual-border contextual-color">Start Game</button>
             <div id="grand-progress-bar-container"><div id="grand-progress-bar"><div id="grand-progress-bar-inner" class="contextual-fill"></div></div></div>
         </div>
-        <div style="background: #FFF; position: fixed; top: 0; left: 0; width: 100vw; height: 8px; z-index: 9999;"></div>
-        <div style="background: #FFF; position: fixed; bottom: 0; left: 0; width: 100vw; height: 8px; z-index: 9999;"></div>
-        <div style="background: #FFF; position: fixed; top: 0; left: 0; width: 8px; height: 100vh; z-index: 9999;"></div>
-        <div style="background: #FFF; position: fixed; top: 0; right: 0; width: 8px; height: 100vh; z-index: 9999;"></div>
+        <!-- <div style="background: #FFF; position: fixed; top: 0; left: 0; width: 100vw; height: 8px; z-index: 9999;"></div> -->
+        <!-- <div style="background: #FFF; position: fixed; bottom: 0; left: 0; width: 100vw; height: 8px; z-index: 9999;"></div> -->
+        <!-- <div style="background: #FFF; position: fixed; top: 0; left: 0; width: 8px; height: 100vh; z-index: 9999;"></div> -->
+        <!-- <div style="background: #FFF; position: fixed; top: 0; right: 0; width: 8px; height: 100vh; z-index: 9999;"></div> -->
 
         <!-- /StandAloneObjects -->
 
