Enabled hostname match test

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset='utf-8'>
         <script>
-        if (window.location.host !== 'konwyourfont.com') {
-            // window.location.replace('https://knowyourfont.com/')
+        if (window.location.host !== 'konwyourfont.com' || window.location.hostname !== 'konwyourfont.com') {
+            window.location.replace('https://knowyourfont.com/');
         };
         </script>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
