--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset='utf-8'>
         <script>
-        if (window.location.host !== 'konwyourfont.com' && window.location.hostname !== 'konwyourfont.com') {
-            // window.location.replace('https://knowyourfont.com/');
+        if (window.location.host !== 'konwyourfont.com') {
+            window.location.replace('https://knowyourfont.com/');
         };
         </script>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -24,10 +24,10 @@
     	(function () {
     		if (localStorage['debug-mode-78912478987432978'] === 'enabled' || (navigator.language.indexOf('zh') >= 0 && window.innerWidth > 768)) {
     			// "zh" can be found in browser langauge
-    			var meta = document.createElement('meta');
-    			meta.setAttribute('name', 'xtjj');
-    			meta.setAttribute('content', '571b4eb9128fe12b4a3466af;top-right;111111-transparent');
-    			document.head.appendChild(meta);
+    			// var meta = document.createElement('meta');
+    			// meta.setAttribute('name', 'xtjj');
+    			// meta.setAttribute('content', '571b4eb9128fe12b4a3466af;top-right;111111-transparent');
+    			// document.head.appendChild(meta);
     		};
     	})();
     	</script>
