--- a/index.html
+++ b/index.html
@@ -28,25 +28,22 @@
     	</script>
 
         <!-- Prefetch: Images -->
-        <link rel="prefetch" href="/img/logo-b@6x.png" />
-        <link rel="prefetch" href="/img/logo-b.png" />
-        <link rel="prefetch" href="/img/logo-w.png" />
-        <link rel="prefetch" href="/img/social-sharing-splash-image.jpg" />
+        <link rel="subresource" href="/img/logo-b@6x.png" />
+        <link rel="subresource" href="/img/logo-b.png" />
+        <link rel="subresource" href="/img/logo-w.png" />
+        <link rel="subresource" href="/img/social-sharing-splash-image.jpg" />
 
         <!-- Prefetch: Backgrounds -->
-        <link rel="prefetch" href="/img/bg/c1-bg1.jpg" />
-        <link rel="prefetch" href="/img/bg/c1-bg2.jpg" />
-        <link rel="prefetch" href="/img/bg/c2-bg1.jpg" />
-        <link rel="prefetch" href="/img/bg/c2-bg2.jpg" />
-        <link rel="prefetch" href="/img/bg/c3-bg1.jpg" />
-        <link rel="prefetch" href="/img/bg/c3-bg2.jpg" />
+        <link rel="subresource" href="/img/bg/c1-bg1.jpg" />
+        <link rel="subresource" href="/img/bg/c1-bg2.jpg" />
+        <link rel="subresource" href="/img/bg/c2-bg1.jpg" />
+        <link rel="subresource" href="/img/bg/c2-bg2.jpg" />
+        <link rel="subresource" href="/img/bg/c3-bg1.jpg" />
+        <link rel="subresource" href="/img/bg/c3-bg2.jpg" />
 
         <!-- Prefetch: WOFF -->
-        <link rel="prefetch" href="/fonts/open-sans/OpenSans.woff" />
-        <link rel="prefetch" href="/fonts/fontawesome-webfont.woff" />
-
-        <!-- Prefetch: Data -->
-        <link rel="prefetch" href="/manifest.json" />
+        <link rel="subresource" href="/fonts/open-sans/OpenSans.woff" />
+        <link rel="subresource" href="/fonts/fontawesome-webfont.woff" />
 
         <!-- Styles -->
         <link rel="stylesheet" href="/fonts/open-sans.css" />
@@ -67,7 +64,7 @@
                 (new Array(chapterSize)).fill(1).map(function (_a, _b) { return _b }).map(function (_a, _b) {
                     for (var i = 1; i < 4; i++) {
                         var tag = document.createElement('link');
-                        tag.setAttribute('rel', 'prefetch');
+                        tag.setAttribute('rel', 'subresource');
                         tag.setAttribute('href', '/img/can/' + (chapter+1) + '/1-' + (_b+1) + '-' + i + '.png');
                         document.head.appendChild(tag);
                     };
