added link for apple-touch-icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta name='description' content='Know how familiar you are with the most famous fonts.'>
         <meta id="meta-description" name='keywords' content='font|fonts|typography'>
 
+        <link rel="shortcut icon" href="/favicon.jpg" />
+        <link rel="apple-touch-icon" href="/favicon.jpg" />
+
         <meta property="og:url" content="https://knowyourfont.com/" />
         <meta property="og:type" content="article" />
         <meta id="meta-og-title" property="og:title" content="Know Your Font" />
