Aggressive prefetch policy for all assets

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <link rel="subresource" href="/img/logo-b.png" />
         <link rel="subresource" href="/img/logo-w.png" />
         <link rel="subresource" href="/img/social-sharing-splash-image.jpg" />
+        <link rel="prefetch" href="/img/logo-b@6x.png" />
+        <link rel="prefetch" href="/img/logo-b.png" />
+        <link rel="prefetch" href="/img/logo-w.png" />
+        <link rel="prefetch" href="/img/social-sharing-splash-image.jpg" />
 
         <!-- Prefetch: Backgrounds -->
         <link rel="subresource" href="/img/bg/c1-bg1.jpg" />
@@ -43,10 +47,18 @@
         <link rel="subresource" href="/img/bg/c2-bg2.jpg" />
         <link rel="subresource" href="/img/bg/c3-bg1.jpg" />
         <link rel="subresource" href="/img/bg/c3-bg2.jpg" />
+        <link rel="prefetch" href="/img/bg/c1-bg1.jpg" />
+        <link rel="prefetch" href="/img/bg/c1-bg2.jpg" />
+        <link rel="prefetch" href="/img/bg/c2-bg1.jpg" />
+        <link rel="prefetch" href="/img/bg/c2-bg2.jpg" />
+        <link rel="prefetch" href="/img/bg/c3-bg1.jpg" />
+        <link rel="prefetch" href="/img/bg/c3-bg2.jpg" />
 
         <!-- Prefetch: WOFF -->
         <link rel="subresource" href="/fonts/open-sans/OpenSans.woff" />
         <link rel="subresource" href="/fonts/fontawesome-webfont.woff" />
+        <link rel="prefetch" href="/fonts/open-sans/OpenSans.woff" />
+        <link rel="prefetch" href="/fonts/fontawesome-webfont.woff" />
 
         <!-- Styles -->
         <link rel="stylesheet" href="/fonts/open-sans.css" />
