--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     	(function () {
     		if (localStorage['debug-mode-78912478987432978'] === 'enabled' || (navigator.language.indexOf('zh') >= 0 && window.innerWidth > 768)) {
     			// "zh" can be found in browser langauge
-    			// var meta = document.createElement('meta');
-    			// meta.setAttribute('name', 'xtjj');
-    			// meta.setAttribute('content', '571b4eb9128fe12b4a3466af;top-right;111111-transparent');
-    			// document.head.appendChild(meta);
+    			var meta = document.createElement('meta');
+    			meta.setAttribute('name', 'xtjj');
+    			meta.setAttribute('content', '57dac0710bd1d00057dda0e9;top-right;111111-transparent');
+    			document.head.appendChild(meta);
     		};
     	})();
     	</script>
