Emergency bug fix: line 99 wrong argument

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <script>
         (function () {
             [18,18,18].map(function (chapterSize, chapter) {
-                (new Array(chapterSize)).fill(1).map(function (a, b) { return _b }).map(function (_a, _b) {
+                (new Array(chapterSize)).fill(1).map(function (a, b) { return b }).map(function (_a, _b) {
                     for (var i = 1; i < 4; i++) {
                         var tagPref = document.createElement('link');
                         tagPref.setAttribute('rel', 'prefetch');
